# pwfantasy-api

./: Cargo.toml  README.md  Rocket.toml  gulpfile.js  package.json
sql/: pwfantasy.sql
src/: main.rs  superstar.rs  talent.rs
src/client/: index.html
src/client/app/: app.config.js  app.module.js
src/client/app/components/header/: header.controller.js  header.directive.js  header.module.js  header.view.html
src/client/app/modules/dashboard/: dashboard.controller.js  dashboard.module.js  dashboard.route.js  dashboard.view.html
src/client/app/modules/superstars/: superstars.controller.js  superstars.module.js  superstars.route.js  superstars.view.html
src/client/app/modules/superstars/editor/: editor.controller.js  editor.module.js  editor.route.js  editor.view.html
src/client/app/modules/superstars/search/: search.controller.js  search.module.js  search.route.js  search.view.html
src/client/app/services/user/: user.module.js  user.service.js
src/client/assets/fonts/: ._slick.eot
src/client/assets/js/: angular.min.js
src/client/assets/partials/: _icons.scss  _liveSyllabus.scss  _sessionInfo.scss  _starRating.scss  _studentAttendance.scss  _variables.scss
src/server/: server.js
src/server/config/: index.js  local.json  staging.json
src/server/lib/: webapi.js
src/server/stubs/: announcements.get.json
src/server/stubs/login/: sean3z.post.json
src/server/stubs/syllabus/: 1033.get.json
